// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Navbar Navbar is invisible when hideLogin=true 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Navbar
    hideLogin={true}
    logoutSubmit={[Function]}
    routing={
      Object {
        "history": Object {
          "action": "POP",
          "block": [Function],
          "createHref": [Function],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "length": 2,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "key": "",
            "pathname": "",
            "search": "",
            "state": Object {},
          },
          "push": [Function],
          "replace": [Function],
        },
        "location": Object {
          "hash": "",
          "key": "",
          "pathname": "",
          "search": "",
          "state": Object {},
        },
        "match": Object {
          "isExact": true,
          "params": Object {},
          "path": "",
          "url": "",
        },
        "staticContext": Object {
          "status": 200,
        },
      }
    }
    user={null}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": <Menu
        secondary={true}
      >
        <MenuItem>
          <Link
            replace={false}
            to="/"
          >
            Home
          </Link>
        </MenuItem>
        <MenuMenu
          className="f1h65fgz"
          position="right"
        >
          <MenuItem>
            <Link
              replace={false}
              to="/login"
            >
              Log In
            </Link>
          </MenuItem>
        </MenuMenu>
      </Menu>,
      "className": undefined,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <MenuItem>
            <Link
              replace={false}
              to="/"
            >
              Home
            </Link>
          </MenuItem>,
          <MenuMenu
            className="f1h65fgz"
            position="right"
          >
            <MenuItem>
              <Link
                replace={false}
                to="/login"
              >
                Log In
              </Link>
            </MenuItem>
          </MenuMenu>,
        ],
        "secondary": true,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Link
              replace={false}
              to="/"
            >
              Home
            </Link>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Home",
              "replace": false,
              "to": "/",
            },
            "ref": null,
            "rendered": "Home",
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <MenuItem>
              <Link
                replace={false}
                to="/login"
              >
                Log In
              </Link>
            </MenuItem>,
            "className": "f1h65fgz",
            "position": "right",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Link
                replace={false}
                to="/login"
              >
                Log In
              </Link>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Log In",
                "replace": false,
                "to": "/login",
              },
              "ref": null,
              "rendered": "Log In",
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <Menu
          secondary={true}
        >
          <MenuItem>
            <Link
              replace={false}
              to="/"
            >
              Home
            </Link>
          </MenuItem>
          <MenuMenu
            className="f1h65fgz"
            position="right"
          >
            <MenuItem>
              <Link
                replace={false}
                to="/login"
              >
                Log In
              </Link>
            </MenuItem>
          </MenuMenu>
        </Menu>,
        "className": undefined,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <MenuItem>
              <Link
                replace={false}
                to="/"
              >
                Home
              </Link>
            </MenuItem>,
            <MenuMenu
              className="f1h65fgz"
              position="right"
            >
              <MenuItem>
                <Link
                  replace={false}
                  to="/login"
                >
                  Log In
                </Link>
              </MenuItem>
            </MenuMenu>,
          ],
          "secondary": true,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Link
                replace={false}
                to="/"
              >
                Home
              </Link>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Home",
                "replace": false,
                "to": "/",
              },
              "ref": null,
              "rendered": "Home",
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": <MenuItem>
                <Link
                  replace={false}
                  to="/login"
                >
                  Log In
                </Link>
              </MenuItem>,
              "className": "f1h65fgz",
              "position": "right",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Link
                  replace={false}
                  to="/login"
                >
                  Log In
                </Link>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Log In",
                  "replace": false,
                  "to": "/login",
                },
                "ref": null,
                "rendered": "Log In",
                "type": [Function],
              },
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Test Navbar Navbar is invisible when hideNavbar=true 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Navbar
    hideNavbar={true}
    logoutSubmit={[Function]}
    routing={
      Object {
        "history": Object {
          "action": "POP",
          "block": [Function],
          "createHref": [Function],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "length": 2,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "key": "",
            "pathname": "",
            "search": "",
            "state": Object {},
          },
          "push": [Function],
          "replace": [Function],
        },
        "location": Object {
          "hash": "",
          "key": "",
          "pathname": "",
          "search": "",
          "state": Object {},
        },
        "match": Object {
          "isExact": true,
          "params": Object {},
          "path": "",
          "url": "",
        },
        "staticContext": Object {
          "status": 200,
        },
      }
    }
    user={null}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": <Menu
        secondary={true}
      >
        <MenuItem>
          <Link
            replace={false}
            to="/"
          >
            Home
          </Link>
        </MenuItem>
        <MenuMenu
          position="right"
        >
          <MenuItem>
            <Link
              replace={false}
              to="/login"
            >
              Log In
            </Link>
          </MenuItem>
        </MenuMenu>
      </Menu>,
      "className": "f1h65fgz",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <MenuItem>
            <Link
              replace={false}
              to="/"
            >
              Home
            </Link>
          </MenuItem>,
          <MenuMenu
            position="right"
          >
            <MenuItem>
              <Link
                replace={false}
                to="/login"
              >
                Log In
              </Link>
            </MenuItem>
          </MenuMenu>,
        ],
        "secondary": true,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Link
              replace={false}
              to="/"
            >
              Home
            </Link>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Home",
              "replace": false,
              "to": "/",
            },
            "ref": null,
            "rendered": "Home",
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <MenuItem>
              <Link
                replace={false}
                to="/login"
              >
                Log In
              </Link>
            </MenuItem>,
            "className": undefined,
            "position": "right",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Link
                replace={false}
                to="/login"
              >
                Log In
              </Link>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Log In",
                "replace": false,
                "to": "/login",
              },
              "ref": null,
              "rendered": "Log In",
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <Menu
          secondary={true}
        >
          <MenuItem>
            <Link
              replace={false}
              to="/"
            >
              Home
            </Link>
          </MenuItem>
          <MenuMenu
            position="right"
          >
            <MenuItem>
              <Link
                replace={false}
                to="/login"
              >
                Log In
              </Link>
            </MenuItem>
          </MenuMenu>
        </Menu>,
        "className": "f1h65fgz",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <MenuItem>
              <Link
                replace={false}
                to="/"
              >
                Home
              </Link>
            </MenuItem>,
            <MenuMenu
              position="right"
            >
              <MenuItem>
                <Link
                  replace={false}
                  to="/login"
                >
                  Log In
                </Link>
              </MenuItem>
            </MenuMenu>,
          ],
          "secondary": true,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Link
                replace={false}
                to="/"
              >
                Home
              </Link>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Home",
                "replace": false,
                "to": "/",
              },
              "ref": null,
              "rendered": "Home",
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": <MenuItem>
                <Link
                  replace={false}
                  to="/login"
                >
                  Log In
                </Link>
              </MenuItem>,
              "className": undefined,
              "position": "right",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Link
                  replace={false}
                  to="/login"
                >
                  Log In
                </Link>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Log In",
                  "replace": false,
                  "to": "/login",
                },
                "ref": null,
                "rendered": "Log In",
                "type": [Function],
              },
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Test Navbar Navbar renders logout with user 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Navbar
    logoutSubmit={[Function]}
    routing={
      Object {
        "history": Object {
          "action": "POP",
          "block": [Function],
          "createHref": [Function],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "length": 2,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "key": "",
            "pathname": "",
            "search": "",
            "state": Object {},
          },
          "push": [Function],
          "replace": [Function],
        },
        "location": Object {
          "hash": "",
          "key": "",
          "pathname": "",
          "search": "",
          "state": Object {},
        },
        "match": Object {
          "isExact": true,
          "params": Object {},
          "path": "",
          "url": "",
        },
        "staticContext": Object {
          "status": 200,
        },
      }
    }
    user={
      Object {
        "email": "asdf",
        "id": 1,
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": <Menu
        secondary={true}
      >
        <MenuItem>
          <Link
            replace={false}
            to="/"
          >
            Home
          </Link>
        </MenuItem>
        <MenuMenu
          position="right"
        >
          <MenuItem>
            <a
              onClick={[Function]}
            >
              Log Out
            </a>
          </MenuItem>
        </MenuMenu>
      </Menu>,
      "className": undefined,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <MenuItem>
            <Link
              replace={false}
              to="/"
            >
              Home
            </Link>
          </MenuItem>,
          <MenuMenu
            position="right"
          >
            <MenuItem>
              <a
                onClick={[Function]}
              >
                Log Out
              </a>
            </MenuItem>
          </MenuMenu>,
        ],
        "secondary": true,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Link
              replace={false}
              to="/"
            >
              Home
            </Link>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Home",
              "replace": false,
              "to": "/",
            },
            "ref": null,
            "rendered": "Home",
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <MenuItem>
              <a
                onClick={[Function]}
              >
                Log Out
              </a>
            </MenuItem>,
            "className": undefined,
            "position": "right",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <a
                onClick={[Function]}
              >
                Log Out
              </a>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Log Out",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "Log Out",
              "type": "a",
            },
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <Menu
          secondary={true}
        >
          <MenuItem>
            <Link
              replace={false}
              to="/"
            >
              Home
            </Link>
          </MenuItem>
          <MenuMenu
            position="right"
          >
            <MenuItem>
              <a
                onClick={[Function]}
              >
                Log Out
              </a>
            </MenuItem>
          </MenuMenu>
        </Menu>,
        "className": undefined,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <MenuItem>
              <Link
                replace={false}
                to="/"
              >
                Home
              </Link>
            </MenuItem>,
            <MenuMenu
              position="right"
            >
              <MenuItem>
                <a
                  onClick={[Function]}
                >
                  Log Out
                </a>
              </MenuItem>
            </MenuMenu>,
          ],
          "secondary": true,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Link
                replace={false}
                to="/"
              >
                Home
              </Link>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Home",
                "replace": false,
                "to": "/",
              },
              "ref": null,
              "rendered": "Home",
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": <MenuItem>
                <a
                  onClick={[Function]}
                >
                  Log Out
                </a>
              </MenuItem>,
              "className": undefined,
              "position": "right",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <a
                  onClick={[Function]}
                >
                  Log Out
                </a>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Log Out",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": "Log Out",
                "type": "a",
              },
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Test Navbar Test default render 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Navbar
    logoutSubmit={[Function]}
    routing={
      Object {
        "history": Object {
          "action": "POP",
          "block": [Function],
          "createHref": [Function],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "length": 2,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "key": "",
            "pathname": "",
            "search": "",
            "state": Object {},
          },
          "push": [Function],
          "replace": [Function],
        },
        "location": Object {
          "hash": "",
          "key": "",
          "pathname": "",
          "search": "",
          "state": Object {},
        },
        "match": Object {
          "isExact": true,
          "params": Object {},
          "path": "",
          "url": "",
        },
        "staticContext": Object {
          "status": 200,
        },
      }
    }
    user={null}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": <Menu
        secondary={true}
      >
        <MenuItem>
          <Link
            replace={false}
            to="/"
          >
            Home
          </Link>
        </MenuItem>
        <MenuMenu
          position="right"
        >
          <MenuItem>
            <Link
              replace={false}
              to="/login"
            >
              Log In
            </Link>
          </MenuItem>
        </MenuMenu>
      </Menu>,
      "className": undefined,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <MenuItem>
            <Link
              replace={false}
              to="/"
            >
              Home
            </Link>
          </MenuItem>,
          <MenuMenu
            position="right"
          >
            <MenuItem>
              <Link
                replace={false}
                to="/login"
              >
                Log In
              </Link>
            </MenuItem>
          </MenuMenu>,
        ],
        "secondary": true,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Link
              replace={false}
              to="/"
            >
              Home
            </Link>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Home",
              "replace": false,
              "to": "/",
            },
            "ref": null,
            "rendered": "Home",
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <MenuItem>
              <Link
                replace={false}
                to="/login"
              >
                Log In
              </Link>
            </MenuItem>,
            "className": undefined,
            "position": "right",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Link
                replace={false}
                to="/login"
              >
                Log In
              </Link>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Log In",
                "replace": false,
                "to": "/login",
              },
              "ref": null,
              "rendered": "Log In",
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <Menu
          secondary={true}
        >
          <MenuItem>
            <Link
              replace={false}
              to="/"
            >
              Home
            </Link>
          </MenuItem>
          <MenuMenu
            position="right"
          >
            <MenuItem>
              <Link
                replace={false}
                to="/login"
              >
                Log In
              </Link>
            </MenuItem>
          </MenuMenu>
        </Menu>,
        "className": undefined,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <MenuItem>
              <Link
                replace={false}
                to="/"
              >
                Home
              </Link>
            </MenuItem>,
            <MenuMenu
              position="right"
            >
              <MenuItem>
                <Link
                  replace={false}
                  to="/login"
                >
                  Log In
                </Link>
              </MenuItem>
            </MenuMenu>,
          ],
          "secondary": true,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Link
                replace={false}
                to="/"
              >
                Home
              </Link>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Home",
                "replace": false,
                "to": "/",
              },
              "ref": null,
              "rendered": "Home",
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": <MenuItem>
                <Link
                  replace={false}
                  to="/login"
                >
                  Log In
                </Link>
              </MenuItem>,
              "className": undefined,
              "position": "right",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Link
                  replace={false}
                  to="/login"
                >
                  Log In
                </Link>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Log In",
                  "replace": false,
                  "to": "/login",
                },
                "ref": null,
                "rendered": "Log In",
                "type": [Function],
              },
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
